# accelerometer_integration

./: README.md  integrator.py
get_sensor_data/: CMakeLists.txt
get_sensor_data/analysis/: acc_analysis.m  plot_acc.m
get_sensor_data/data/: merge_data.sh
get_sensor_data/data/20180321_200641/: _header
get_sensor_data/lib/: CMakeLists.txt
get_sensor_data/src/: Makefile  Queue.h  file_handling.h  get_sensor_data.cpp  i2c_bus.cpp  i2c_bus.h  lis3mdl.cpp  lis3mdl.h  lps.cpp  lps.h  lsm6.cpp  lsm6.h
math_analysis/: plot_acc.m  plot_fft.m  spectral_analysis.m
raw_data/: y_acc.csv
